--- a/soccer_birth_months.Rmd
+++ b/soccer_birth_months.Rmd
@@ -1,30 +1,35 @@
 ---
-title: "soccer_birth_months"
-author: "Zuhair Usmani"
-date: "6/15/2021"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE)
+library(tidyverse)
+library(lubridate)
+library(reprex)
+library(rvest)
 ```
 
-## R Markdown
+```{r}
+knitr::opts_chunk$set(echo = FALSE)
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+x <- read_csv("birthdates.csv", col_types = cols(value = col_character()))
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+x%>%
+  mutate(birthdate = parse_date(str_sub(value, 2,11)))%>%
+  mutate(raw_month = months(birthdate))%>%
+  mutate(month = parse_factor(raw_month, levels = month.name)) %>%
+  group_by(month)%>%
+  summarize(total = n())%>%
+  ggplot(mapping = aes(x = total, y = month))+
+  geom_col()+
+  labs(
+    title = "Euro 2020 Soccer Player Birth Months",
+    subtitle = "Elite players are not more likely to be born in January",
+    x = "Number of players",
+    y = NULL,
+    caption = "Data from Wikipedia"
+  )
+  
 
-```{r cars}
-summary(cars)
 ```
-
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
